fix : Swap Images feature shows uncropped image

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
@@ -1522,6 +1522,11 @@ p.demo_store[data-position="bottom"],
   box-shadow: none;
 }
 
+.woocommerce-js ul.products li.product a img.show-on-hover {
+  height: 100%;
+  object-fit: cover;
+}
+
 .woocommerce-js ul.products li.product strong {
   display: block;
 }
