--- a/sass/site/compatibility/woocommerce/woocommerce-grid.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce-grid.scss
@@ -1300,6 +1300,11 @@ p.demo_store,
 			display: block;
 			margin: 0 0 1em;
 			box-shadow: none;
+
+			&.show-on-hover {
+				height: 100%;
+				object-fit: cover;
+			}
 		}
 
 		strong {
